--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="Items"
+        android:title="@string/items"
         android:id="@+id/item1"
         >
     </item>
 
     <item
-        android:title="Find Us"
+        android:title="@string/find_us"
         android:id="@+id/item2"
         >
     </item>
 
     <item
-        android:title="Log Out"
+        android:title="@string/log_out"
         android:id="@+id/item3"
         >
     </item>
-
 </menu>
