--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="brown_200">#CE9466</color>
     <color name="brown_500">#967259</color>
     <color name="brown_700">#3D1C05</color>
+    <color name="brownTitle">#634832</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -16,4 +17,5 @@
     <color name="backgroundColor">#EFD1B3</color>
     <color name="sideBarBrownColor">#C28D4B</color>
     <color name="sideBarWhiteColor">#EAD8C1</color>
+    <color name="grey">#797979</color>
 </resources>
