--- a/app/src/main/res/layout/fragment_appetizer.xml
+++ b/app/src/main/res/layout/fragment_appetizer.xml
@@ -6,9 +6,10 @@
     tools:context=".FragmentAppetizer">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/appetizerRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Appetizer Fragment" />
+        />
 
 </FrameLayout>
