--- a/app/src/main/res/layout/fragment_beverage.xml
+++ b/app/src/main/res/layout/fragment_beverage.xml
@@ -6,9 +6,10 @@
     tools:context=".FragmentBeverage">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/beverageRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Beverage Fragment" />
+        />
 
 </FrameLayout>
