--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,15 +9,16 @@
         android:padding="10dp">
 
         <ImageView
+            android:id="@+id/itemImageIV"
             android:layout_gravity="center"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/logo"
             />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center">
@@ -27,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item Name"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 />
 
@@ -36,19 +37,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item Price"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="end">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom"
                 android:text="More Detail"
                 android:textAllCaps="false"
                 android:textStyle="italic"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 />
-
         </LinearLayout>
 
     </LinearLayout>
