--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -26,6 +26,7 @@
             android:textAlignment="center"
             android:textSize="40sp"
             android:layout_marginVertical="20dp"
+            android:textStyle="bold|italic"
             />
 
         <com.google.android.material.tabs.TabLayout
