--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,19 +6,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="@drawable/repeater_background">
+
+        <TextView
+            android:id="@+id/itemDescTV"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="@string/description"
+            android:visibility="invisible"
+            />
 
         <ImageView
             android:id="@+id/itemImageIV"
             android:layout_gravity="center"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginHorizontal="5dp"
             android:src="@drawable/logo"
             />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center">
@@ -27,7 +36,7 @@
                 android:id="@+id/itemNameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Item Name"
+                android:text="@string/item_name"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 />
@@ -36,7 +45,7 @@
                 android:id="@+id/itemPriceTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Item Price"
+                android:text="@string/item_price"
                 android:textSize="15sp"
                 />
 
@@ -51,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:text="More Detail"
+                android:text="@string/more_detail"
                 android:textAllCaps="false"
                 android:textStyle="italic"
                 android:textSize="12sp"
