--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,20 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
+        android:id="@+id/listItemLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"
         android:background="@drawable/repeater_background">
-
-        <TextView
-            android:id="@+id/itemDescTV"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:text="@string/description"
-            android:visibility="invisible"
-            />
 
         <ImageView
             android:id="@+id/itemImageIV"
@@ -51,21 +45,14 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="end">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:text="@string/more_detail"
-                android:textAllCaps="false"
-                android:textStyle="italic"
-                android:textSize="12sp"
-                />
-        </LinearLayout>
+            android:gravity="bottom|end"
+            android:text="@string/more_detail"
+            android:textStyle="italic"
+            android:textSize="14sp"
+            />
 
     </LinearLayout>
 
