re-design find us page

--- a/app/src/main/res/layout/activity_find_us.xml
+++ b/app/src/main/res/layout/activity_find_us.xml
@@ -7,14 +7,12 @@
     android:orientation="vertical"
     android:background="@color/backgroundColor"
     android:id="@+id/drawerLayoutFindUs"
-    tools:context=".FindUs"
-    >
+    tools:context=".FindUs">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
         <include
             layout="@layout/toolbar"
             />
@@ -22,76 +20,151 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginVertical="10dp"
             android:src="@drawable/logo"
             />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginEnd="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/cafe_legend_app"
+                    android:textColor="@color/brownTitle"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:text="@string/since_2022"
+                    android:textColor="@color/brownTitle"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    />
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_adb_45"
+                android:layout_gravity="center"
+                />
+
+        </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Cafe Legend App"
+            android:layout_gravity="center"
+            android:text="@string/find_us"
             android:textColor="@color/brownTitle"
-            android:textSize="20dp"
+            android:textSize="34sp"
             android:textStyle="bold"
+            android:layout_marginVertical="15dp"
             />
-        <TextView
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Since 2022"
-            android:textColor="@color/brownTitle"
-            android:textSize="16dp"
-            android:textStyle="italic"/>
-        <TextView
+            android:layout_marginStart="75dp"
+            android:layout_marginVertical="10dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_apartment_45"
+                android:layout_gravity="center"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/samsan_tech"
+                    android:textColor="@color/brownTitle"
+                    android:textSize="18sp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/best_app_development_company"
+                    android:textColor="@color/grey"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Find Us"
-            android:textColor="@color/brownTitle"
-            android:textSize="34dp"
-            android:textStyle="bold"
-            android:layout_marginTop="30dp"
-            />
-        <TextView
+            android:layout_marginStart="75dp"
+            android:layout_marginVertical="10dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_near_me_45"
+                android:layout_gravity="center"
+                />
+
+            <TextView
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="@string/find_us_street"
+                android:textColor="@color/brownTitle"
+                android:textSize="18sp"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Samsan Tech"
-            android:textColor="@color/brownTitle"
-            android:textSize="18dp"
-            android:layout_marginLeft="-35dp"
-            android:layout_marginTop="30dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Best App Development Company"
-            android:textColor="@color/grey"
-            android:textSize="12dp"
-            android:layout_marginLeft="-5dp"
-            android:textStyle="italic"
-            />
-        <TextView
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Jl. Pakuan No.3, Sumur Batu, Babakan Madang, Bogor Regency, West Java 16810"
-            android:textColor="@color/brownTitle"
-            android:textSize="18dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="35dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="samsantech@gmail.com"
-            android:textColor="@color/brownTitle"
-            android:textSize="18dp"
-            android:layout_marginRight="-10dp"
-            android:layout_marginTop="30dp"
-            />
+            android:layout_marginStart="75dp"
+            android:layout_marginVertical="10dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_email_45"
+                android:layout_gravity="center"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/find_us_email"
+                android:textColor="@color/brownTitle"
+                android:textSize="18sp"
+                android:layout_marginStart="10dp"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
