--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,12 +19,37 @@
             layout="@layout/toolbar"
             />
 
-        <ViewFlipper
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_margin="30dp"
-            android:layout_centerVertical="true"
-            android:id="@+id/vf_flipper"/>
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/carouselBackIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                android:layout_gravity="center"
+                android:layout_marginStart="6dp"
+                />
+
+            <ViewFlipper
+                android:layout_width="350dp"
+                android:layout_height="200dp"
+                android:layout_marginVertical="20dp"
+                android:layout_marginEnd="2dp"
+                android:layout_centerVertical="true"
+                android:id="@+id/vf_flipper"/>
+
+            <ImageView
+                android:id="@+id/carouselNextIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
+                android:layout_gravity="center"
+                />
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="wrap_content"
